# arc-c-droprun

./: CMakeLists.txt  config.sh
.cache/clangd/index/: main.c.DC10490729732B84.idx
src/: main.c
